<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">HangmanPeersUp</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="select_game">Select Game</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="recover_password">Recover Password</string>
    <string name="sign_up">SignUp</string>
    <string name="browse">Browse</string>
    <string name="end_game">End Game</string>
    <string name="logout">Logout</string>
    <string name="clientId">iXKWARGAc8iOEfRuon8TppaXeDyZJMVZjOdwGXB8</string>
    <string name="appId">aWzlBXzi72l7TVhqh1Y4uLzlMXdZGJUVnCtfL9OY</string>
    <string name="register_text">Register Now</string>
    <string name="common_text">|</string>
    <string name="forget_text">Forgot Password ?</string>
    <string name="not_connected">You are currently not connected to</string>
    <string name="connected_to">You are currently connected to</string>
    <string name="game_progress">Game is into Progress...</string>
    <string name="not_connected1"> any device.</string>
    <string name="browse_device">Click on Browse button to see avaiable device</string>
    <string name="pair_device">Paired Devices</string>
    <string name="unpair_device">Unpaired Devices</string>
    <string name="hangeman_txt">Hangman</string>
    <string name="battleship_txt">Battle Ship</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>

    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>


</resources>
