<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ground"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/NotConnectedDeviceTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/not_connected"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/NotConnectedDeviceTxt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/NotConnectedDeviceTxt"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/not_connected1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp" />


        <TextView
            android:id="@+id/BrowseDeviceTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/NotConnectedDeviceTxt1"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:text="@string/browse_device"
            android:textColor="@color/black_color"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/browseTxtLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/BrowseDeviceTxt"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/browse"
                android:textColor="@color/default_back_color"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/LogoutTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/browseTxtLayout"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/logout"
                android:textColor="@color/default_back_color"
                android:textSize="18sp" />
        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>