<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ground"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/uNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoImage"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/email"
            android:textColor="@color/black_color"
            android:textSize="18sp" />

        <RelativeLayout
            android:id="@+id/uNameLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/uNameTxt"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/border_image">

            <EditText
                android:id="@+id/EmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@null"
                android:hint="Email"
                android:paddingLeft="10dp"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/userNameTxt"
                android:layout_centerInParent="true"
                android:paddingRight="10dp"
                android:src="@drawable/username" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RecoverPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/uNameLayout"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/recover_password"
                android:textColor="@color/default_back_color"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/loginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RecoverPasswordLayout"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login"
                android:textColor="@color/default_back_color"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RegisterLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginLayout"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/register"
                android:textColor="@color/default_back_color"
                android:textSize="18sp" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>