<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ground"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp">


        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/logo" />

        <TextView
            android:id="@+id/uNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoImage"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/user_name"
            android:textColor="@color/black_color"
            android:textSize="18sp" />

        <RelativeLayout
            android:id="@+id/uNameLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/uNameTxt"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/border_image">

            <EditText
                android:id="@+id/userNameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@null"
                android:hint="User name"
                android:paddingLeft="10dp"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/userNameTxt"
                android:layout_centerInParent="true"
                android:paddingRight="10dp"
                android:src="@drawable/username" />
        </RelativeLayout>

        <TextView
            android:id="@+id/pwdsTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/uNameLayout"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/password"
            android:textColor="@color/black_color"
            android:textSize="18sp" />

        <RelativeLayout
            android:id="@+id/pwdLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/pwdsTxt"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/border_image">

            <EditText
                android:id="@+id/pwdTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@null"

                android:hint="Password"
                android:paddingLeft="10dp"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/pwdTxt"
                android:layout_centerInParent="true"
                android:paddingRight="10dp"
                android:src="@drawable/password" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/logoutLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pwdLayout"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login"
                android:textColor="@color/default_back_color"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoutLayout"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/RegisterLayout"
                    android:layout_width="0dp"
                    android:layout_weight=".45"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:paddingLeft="30dp"
                        android:text="@string/register_text"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight=".05"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:text="@string/common_text"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/forgetTextLayout"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:paddingRight="4dp"
                        android:text="@string/forget_text"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>