<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ground"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/uNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/user_name"
            android:textColor="@color/black_color"
            android:textSize="18sp" />

        <RelativeLayout
            android:id="@+id/uNameLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/uNameTxt"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/border_image">

            <EditText
                android:id="@+id/userNameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@null"
                android:hint="user name"
                android:paddingLeft="10dp"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/userNameTxt"
                android:layout_centerInParent="true"
                android:paddingRight="10dp"
                android:src="@drawable/username" />
        </RelativeLayout>

        <TextView
            android:id="@+id/emailTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/uNameLayout"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/email"
            android:textColor="@color/black_color"
            android:textSize="18sp" />

        <RelativeLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/emailTxt"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/border_image">

            <EditText
                android:id="@+id/emailsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@null"
                android:hint="email"
                android:paddingLeft="10dp"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/emailsText"
                android:layout_centerInParent="true"
                android:paddingRight="10dp"
                android:src="@drawable/password" />
        </RelativeLayout>


        <TextView
            android:id="@+id/pwdsTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailLayout"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/password"
            android:textColor="@color/black_color"
            android:textSize="18sp" />

        <RelativeLayout
            android:id="@+id/pwdLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/pwdsTxt"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/border_image">

            <EditText
                android:id="@+id/pwdTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@null"
                android:hint="password"
                android:paddingLeft="10dp"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/pwdTxt"
                android:layout_centerInParent="true"
                android:paddingRight="10dp"
                android:src="@drawable/password" />
        </RelativeLayout>


        <TextView
            android:id="@+id/cpwdsTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pwdLayout"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/confirm_password"
            android:textColor="@color/black_color"
            android:textSize="18sp" />

        <RelativeLayout
            android:id="@+id/cpwdLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/cpwdsTxt"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/border_image">

            <EditText
                android:id="@+id/cpwdTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@null"
                android:hint="confirm password"
                android:paddingLeft="10dp"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/cpwdTxt"
                android:layout_centerInParent="true"
                android:paddingRight="10dp"
                android:src="@drawable/password" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/logoutLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cpwdLayout"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/sign_up"
                android:textColor="@color/default_back_color"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/loginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoutLayout"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login"
                android:textColor="@color/default_back_color"
                android:textSize="18sp" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>